# sfc-consolidation-agent

./: .gitignore  README.md  pyproject.toml
app/: constants.py  main.py  type.py  types.py
app/agents/: agent.py  dqn.py  eehvmc.py  ff.py  ppo.py  random.py
app/dl/models/: base.py  core.py  dqn.py  encoder.py  ppo.py
app/k8s/: envManager.py  simulator.py
app/trainers/: debug.py  dqn.py  env.py  memory.py  ppo.py
app/utils/: utils.py
tests/agents/: ff_test.py
