[tool.poetry]
name = "sfc-consolidation-agent"
version = "0.1.0"
description = ""
authors = ["euidong <justicedong@naver.com>"]
readme = "README.md"
packages = [{include = "sfc_consolidation_agent"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
