[tool.poetry]
name = "sfc-consolidation-agent"
version = "0.1.0"
description = ""
authors = ["euidong <justicedong@naver.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
kubernetes = "28.1.0"
torchrl = "0.2.0"
aiohttp = "^3.8.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
